--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,7 @@
     <script src="mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="../build/build.js"></script>
+    <script src="testdata.js"></script>
     <script src="tests.js"></script>
     <script>
       mocha.run();
